# rag-study

./: README.md
codebase_rag/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
codebase_rag/docs/: ast_deep_dive.md  extraction.md  parsing.md
codebase_rag/scripts/: run_index.py  run_parse.py
codebase_rag/src/: config.py  models.py
codebase_rag/src/chunking/: chunker.py  text_formatter.py
codebase_rag/src/indexing/: embedder.py  vector_store.py
codebase_rag/src/parsing/: call_graph.py  comment_extractor.py  extractors.py  java_parser.py
doc_based_rag/: .env  .gitignore  pyproject.toml
doc_based_rag/docs/: architecture.md
doc_based_rag/scripts/: download_docs.py  run_index.py  run_query.py
doc_based_rag/src/: chunker.py  config.py  indexer.py  loader.py  retriever.py
