[project]
name = "codebase-rag"
version = "0.1.0"
description = "RAG system for natural language Q&A over Java codebases"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "chromadb>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
