[project]
name = "doc-based-rag"
version = "0.1.0"
description = "Kubernetes 한국어 문서 기반 RAG 시스템"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=1.0.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "sentence-transformers>=3.0.0",
    "langchain-huggingface>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
